[package]
name = "gdb-funend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#imgui-sdl2 = "0.14.0"
#imgui = "0.7.0"
#imgui-opengl-renderer = "0.11.0"
gl = "0.14.0"

imgui = { git = "https://github.com/NoxWings/imgui-rs.git", tag = "1.81dock" }
imgui-sdl2 = { git = "https://github.com/NoxWings/rust-imgui-sdl2.git" }
imgui-opengl-renderer = { git = "https://github.com/NoxWings/rust-imgui-opengl-renderer.git" }

[dependencies.sdl2]
version = "0.34.4"
default-features = false
features = ["ttf"]